# smartassets-ml-challenge

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/ml_model/mymodel/: forecasting_model.py
app/models/prediction_status/: prediction_status.py
app/models/request/: request_model.py
app/models/response/: response_model.py
app/preprocessing/: preprocessor.py
app/routes/: health.py  info.py  predict.py
notebooks/: investigation.ipynb
notebooks/data/notebooks/data/: dataset_description.md
