[tool.poetry]
name = "smartassets-ml-challenge"
version = "0.1.0"
description = ""
authors = ["Eric Walzthony <eric.walzthony@locaria.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
loguru = "^0.7.2"
uvicorn = "^0.28.0"
python-dotenv = "^1.0.1"
pydantic = "^2.6.3"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
